# testbench-v3

./: README.md  simulator_constrained.sh  simulator_mb.sh  simulator_random.sh
Example_test_reports_mbtg_xproduct/: assertion2.txt  assertion4.txt  assertion5.txt  assertion6.txt  humanoutr1  humanoutr10  humanoutr11  humanoutr12  humanoutr13  humanoutr14  humanoutr15  humanoutr16  humanoutr17  humanoutr18  humanoutr19  humanoutr2  humanoutr20  humanoutr3  humanoutr4  humanoutr5  humanoutr6  humanoutr7  humanoutr8  humanoutr9  monitor2outr1  monitor2outr10  monitor2outr11  monitor2outr12  monitor2outr13  monitor2outr14  monitor2outr15  monitor2outr16  monitor2outr17  monitor2outr18  monitor2outr19  monitor2outr2  monitor2outr20  monitor2outr3  monitor2outr4  monitor2outr5  (+125 more)
bert2_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bert2_moveit/config/: joint_limits.yaml
bert2_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
bert2_simulator/: CMakeLists.txt  package.xml
bert2_simulator/launch/: bert2_gazebo.launch  empty_world_with_sys_plugin.launch  simple.launch
bert2_simulator/plugins/: CMakeLists.txt  sim_step_monitoring.cc
bert2_simulator/robots/: bert2_object.urdf.xacro  bert2_robot.urdf.xacro  human_hand.urdf.xacro  human_head.urdf.xacro
(+248 files in other folders)
